Stage 1 process changes

--- a/powerplantmatching/package_data/config.yaml
+++ b/powerplantmatching/package_data/config.yaml
@@ -3,21 +3,20 @@ entsoe_token:
 google_api_key:
 opsd_vres_base_year: 2016
 
-
 #matching config
 matching_sources:
     - CARMA
     - ENTSOE
     - GEO
-    - GPD
+    # - GPD
     - JRC
-    - OPSD
+    # - OPSD
     # - ESE
     # - IWPDCY
     # - WEPP
 
 fully_included_sources:
-    - OPSD: Country not in ['Switzerland']
+    # - OPSD: Country not in ['Switzerland']
     - JRC: Country not in ['Switzerland']
     - ENTSOE: Country not in ['Spain', 'Switzerland', 'United Kingdom']
     - CARMA: Country == 'France' and Fueltype == 'Hydro'
@@ -30,7 +29,7 @@ process_limit: 2
 remove_missing_coords: true
 
 #already build data
-matched_data_url: https://raw.githubusercontent.com/FRESNA/powerplantmatching/v0.4.6/powerplants.csv
+matched_data_url: https://raw.githubusercontent.com/FRESNA/powerplantmatching/v0.4.7/powerplants.csv
 
 #data config
 BNETZA:
