Initial parsing out of tortuous ENTSOE return method chaining into commented code sections.  Some tidying, removal of unclear requirements for assign and lamda function.

--- a/powerplantmatching/package_data/config.yaml
+++ b/powerplantmatching/package_data/config.yaml
@@ -5,11 +5,11 @@ opsd_vres_base_year: 2016
 
 #matching config
 matching_sources:
-    - CARMA
+    # - CARMA
     - ENTSOE
-    - GEO
+    # - GEO
     # - GPD
-    - JRC
+    # - JRC
     # - OPSD
     # - ESE
     # - IWPDCY
