Running cut with 5x data sources of modularized pipeline, saving intermediate csvs to defined folders.

--- a/powerplantmatching/package_data/config.yaml
+++ b/powerplantmatching/package_data/config.yaml
@@ -10,13 +10,13 @@ matching_sources:
     - GEO
     # - GPD
     - JRC
-    # - OPSD
+    - OPSD
     # - ESE
     # - IWPDCY
     # - WEPP
 
 fully_included_sources:
-    # - OPSD: Country not in ['Switzerland']
+    - OPSD: Country not in ['Switzerland']
     - JRC: Country not in ['Switzerland']
     - ENTSOE: Country not in ['Spain', 'Switzerland', 'United Kingdom']
     - CARMA: Country == 'France' and Fueltype == 'Hydro'
